// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollup-rewriter should error on unsupported formats ("cjs") 1`] = `"Unsupported format: cjs. Supported formats are [\\"amd\\",\\"es\\",\\"esm\\",\\"system\\"]"`;

exports[`rollup-rewriter should ignore unknown imports 1`] = `
Object {
  "a.js": "
define(['require', 'external'], function (require, external) { 'use strict';

    function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e : { 'default': e }; }

    var external__default = /*#__PURE__*/_interopDefaultLegacy(external);

    const a = \\"mc_a\\";
    var css = {
        \\"a\\" : a
    };

    function a$1() {
        console.log(css, external__default['default']);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return a$1;

});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/external-import/a.css */
.mc_a { color: aqua; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/external-import/c.css */
.mc_c {
    color: cyan;
}
",
  "c.js": "
define(['exports'], function (exports) { 'use strict';

    const c = \\"mc_c\\";
    var css = {
        \\"c\\" : c
    };

    console.log(css);

    exports.default = css;

});
",
}
`;

exports[`rollup-rewriter should ignore unknown imports 2`] = `
Object {
  "a.js": "
import external from 'external';

const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css, external);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/external-import/a.css */
.mc_a { color: aqua; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/external-import/c.css */
.mc_c {
    color: cyan;
}
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should ignore unknown imports 3`] = `
Object {
  "a.js": "
import external from 'external';

const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css, external);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/external-import/a.css */
.mc_a { color: aqua; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/external-import/c.css */
.mc_c {
    color: cyan;
}
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should ignore unknown imports 4`] = `
Object {
  "a.js": "
System.register(['external'], function (exports, module) {
    'use strict';
    var external;
    return {
        setters: [function (module) {
            external = module.default;
        }],
        execute: function () {

            exports('default', a$1);

            const a = \\"mc_a\\";
            var css = {
                \\"a\\" : a
            };

            function a$1() {
                console.log(css, external);

                Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/external-import/a.css */
.mc_a { color: aqua; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/external-import/c.css */
.mc_c {
    color: cyan;
}
",
  "c.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const c = \\"mc_c\\";
            var css = exports('default', {
                \\"c\\" : c
            });

            console.log(css);

        }
    };
});
",
}
`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("amd") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.mc_dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.mc_entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.mc_entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.mc_static1 {
    color: static1;
}
",
  "dynamic1.js": "
define(['exports', './static1'], function (exports, static1) { 'use strict';

    const dynamic1 = \\"mc_dynamic1\\";
    var css = {
        \\"dynamic1\\" : dynamic1
    };

    console.log(static1.static1, css);

    var dynamic1$1 = \\"dynamic1.js\\";

    exports.default = dynamic1$1;

});
",
  "entry1.js": "
define(['./static1'], function (static1) { 'use strict';

    const entry1 = \\"mc_entry1\\";
    var css = {
        \\"entry1\\" : entry1
    };

    console.log(static1.static1, css);

});
",
  "entry2.js": "
define(['require'], function (require) { 'use strict';

    const entry2 = \\"mc_entry2\\";
    var css = {
        \\"entry2\\" : entry2
    };

    console.log(css);

    (function() {
        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    new Promise(function (resolve, reject) { require(['./dynamic1'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }());

});
",
  "static1.js": "
define(['exports'], function (exports) { 'use strict';

    const static1 = \\"mc_static1\\";
    var css = {
        \\"static1\\" : static1
    };

    console.log(css);

    var static1$1 = \\"static1.js\\";

    exports.static1 = static1$1;

});
",
}
`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("es") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.mc_dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.mc_entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.mc_entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.mc_static1 {
    color: static1;
}
",
  "dynamic1.js": "
import { s as static1 } from './static1.js';

const dynamic1 = \\"mc_dynamic1\\";
var css = {
    \\"dynamic1\\" : dynamic1
};

console.log(static1, css);

var dynamic1$1 = \\"dynamic1.js\\";

export default dynamic1$1;
",
  "entry1.js": "
import { s as static1 } from './static1.js';

const entry1 = \\"mc_entry1\\";
var css = {
    \\"entry1\\" : entry1
};

console.log(static1, css);
",
  "entry2.js": "
const entry2 = \\"mc_entry2\\";
var css = {
    \\"entry2\\" : entry2
};

console.log(css);

(function() {
    Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    import('./dynamic1.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}());
",
  "static1.js": "
const static1 = \\"mc_static1\\";
var css = {
    \\"static1\\" : static1
};

console.log(css);

var static1$1 = \\"static1.js\\";

export { static1$1 as s };
",
}
`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("esm") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.mc_dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.mc_entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.mc_entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.mc_static1 {
    color: static1;
}
",
  "dynamic1.js": "
import { s as static1 } from './static1.js';

const dynamic1 = \\"mc_dynamic1\\";
var css = {
    \\"dynamic1\\" : dynamic1
};

console.log(static1, css);

var dynamic1$1 = \\"dynamic1.js\\";

export default dynamic1$1;
",
  "entry1.js": "
import { s as static1 } from './static1.js';

const entry1 = \\"mc_entry1\\";
var css = {
    \\"entry1\\" : entry1
};

console.log(static1, css);
",
  "entry2.js": "
const entry2 = \\"mc_entry2\\";
var css = {
    \\"entry2\\" : entry2
};

console.log(css);

(function() {
    Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    import('./dynamic1.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}());
",
  "static1.js": "
const static1 = \\"mc_static1\\";
var css = {
    \\"static1\\" : static1
};

console.log(css);

var static1$1 = \\"static1.js\\";

export { static1$1 as s };
",
}
`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("system") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.mc_dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.mc_entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.mc_entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.mc_static1 {
    color: static1;
}
",
  "dynamic1.js": "
System.register(['./static1.js'], function (exports) {
    'use strict';
    var static1;
    return {
        setters: [function (module) {
            static1 = module.s;
        }],
        execute: function () {

            const dynamic1 = \\"mc_dynamic1\\";
            var css = {
                \\"dynamic1\\" : dynamic1
            };

            console.log(static1, css);

            var dynamic1$1 = exports('default', \\"dynamic1.js\\");

        }
    };
});
",
  "entry1.js": "
System.register(['./static1.js'], function () {
    'use strict';
    var static1;
    return {
        setters: [function (module) {
            static1 = module.s;
        }],
        execute: function () {

            const entry1 = \\"mc_entry1\\";
            var css = {
                \\"entry1\\" : entry1
            };

            console.log(static1, css);

        }
    };
});
",
  "entry2.js": "
System.register([], function (exports, module) {
    'use strict';
    return {
        execute: function () {

            const entry2 = \\"mc_entry2\\";
            var css = {
                \\"entry2\\" : entry2
            };

            console.log(css);

            (function() {
                Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    module.import('./dynamic1.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }());

        }
    };
});
",
  "static1.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const static1 = \\"mc_static1\\";
            var css = {
                \\"static1\\" : static1
            };

            console.log(css);

            var static1$1 = exports('s', \\"static1.js\\");

        }
    };
});
",
}
`;

exports[`rollup-rewriter should log details in verbose mode 1`] = `
Array [
  Array [
    "[rewriter]",
    "Updating",
    "a.js",
  ],
  Array [
    "[rewriter]",
    "Updating",
    "b.js",
  ],
]
`;

exports[`rollup-rewriter should only rewrite when necessary ("amd") 1`] = `
Object {
  "a.js": "
define(['require'], function (require) { 'use strict';

	const a = \\"mc_a\\";
	var css = {
	    \\"a\\" : a
	};

	console.log(css);

	new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);

});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.mc_b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.mc_c { color: crimson; }
",
  "b.js": "
define(['require'], function (require) { 'use strict';

	const b = \\"mc_b\\";
	var css = {
	    \\"b\\" : b
	};

	console.log(css);

	new Promise(function (resolve, reject) { require(['./d'], resolve, reject) }).then(console.log);

});
",
  "c.js": "
define(['exports'], function (exports) { 'use strict';

	const c = \\"mc_c\\";
	var css = {
	    \\"c\\" : c
	};

	console.log(css);

	var c$1 = \\"c\\";

	exports.default = c$1;

});
",
  "d.js": "
define(['exports'], function (exports) { 'use strict';

	var d = \\"d\\";

	exports.default = d;

});
",
}
`;

exports[`rollup-rewriter should only rewrite when necessary ("es") 1`] = `
Object {
  "a.js": "
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

console.log(css);

Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.mc_b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.mc_c { color: crimson; }
",
  "b.js": "
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

console.log(css);

import('./d.js').then(console.log);
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

var c$1 = \\"c\\";

export default c$1;
",
  "d.js": "
var d = \\"d\\";

export default d;
",
}
`;

exports[`rollup-rewriter should only rewrite when necessary ("esm") 1`] = `
Object {
  "a.js": "
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

console.log(css);

Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.mc_b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.mc_c { color: crimson; }
",
  "b.js": "
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

console.log(css);

import('./d.js').then(console.log);
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

var c$1 = \\"c\\";

export default c$1;
",
  "d.js": "
var d = \\"d\\";

export default d;
",
}
`;

exports[`rollup-rewriter should only rewrite when necessary ("system") 1`] = `
Object {
  "a.js": "
System.register([], function (exports, module) {
	'use strict';
	return {
		execute: function () {

			const a = \\"mc_a\\";
			var css = {
			    \\"a\\" : a
			};

			console.log(css);

			Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);

		}
	};
});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.mc_b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.mc_c { color: crimson; }
",
  "b.js": "
System.register([], function (exports, module) {
	'use strict';
	return {
		execute: function () {

			const b = \\"mc_b\\";
			var css = {
			    \\"b\\" : b
			};

			console.log(css);

			module.import('./d.js').then(console.log);

		}
	};
});
",
  "c.js": "
System.register([], function (exports) {
	'use strict';
	return {
		execute: function () {

			const c = \\"mc_c\\";
			var css = {
			    \\"c\\" : c
			};

			console.log(css);

			var c$1 = exports('default', \\"c\\");

		}
	};
});
",
  "d.js": "
System.register([], function (exports) {
	'use strict';
	return {
		execute: function () {

			var d = exports('default', \\"d\\");

		}
	};
});
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("amd") 1`] = `
Object {
  "a.js": "
define(['require'], function (require) { 'use strict';
import lazyload from \\"./css.js\\";

    const a = \\"mc_a\\";
    var css = {
        \\"a\\" : a
    };

    function a$1() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return a$1;

});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
define(['require'], function (require) { 'use strict';
import lazyload from \\"./css.js\\";

    const b = \\"mc_b\\";
    var css = {
        \\"b\\" : b
    };

    function b$1() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/d.css\\"),
    new Promise(function (resolve, reject) { require(['./d'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return b$1;

});
",
  "c.js": "
define(['exports'], function (exports) { 'use strict';

    const c = \\"mc_c\\";
    var css = {
        \\"c\\" : c
    };

    console.log(css);

    exports.default = css;

});
",
  "d.js": "
define(['exports'], function (exports) { 'use strict';

    const d = \\"mc_d\\";
    var css = {
        \\"d\\" : d
    };

    console.log(css);

    exports.default = css;

});
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("es") 1`] = `
Object {
  "a.js": "
import lazyload from \\"./css.js\\";
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
import lazyload from \\"./css.js\\";
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

function b$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b$1;
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
  "d.js": "
const d = \\"mc_d\\";
var css = {
    \\"d\\" : d
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("esm") 1`] = `
Object {
  "a.js": "
import lazyload from \\"./css.js\\";
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
import lazyload from \\"./css.js\\";
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

function b$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b$1;
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
  "d.js": "
const d = \\"mc_d\\";
var css = {
    \\"d\\" : d
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("system") 1`] = `
Object {
  "a.js": "
System.register([], function (exports, module) {
    'use strict';
import lazyload from \\"./css.js\\";
    return {
        execute: function () {

            exports('default', a$1);

            const a = \\"mc_a\\";
            var css = {
                \\"a\\" : a
            };

            function a$1() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
System.register([], function (exports, module) {
    'use strict';
import lazyload from \\"./css.js\\";
    return {
        execute: function () {

            exports('default', b$1);

            const b = \\"mc_b\\";
            var css = {
                \\"b\\" : b
            };

            function b$1() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/d.css\\"),
    module.import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "c.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const c = \\"mc_c\\";
            var css = exports('default', {
                \\"c\\" : c
            });

            console.log(css);

        }
    };
});
",
  "d.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const d = \\"mc_d\\";
            var css = exports('default', {
                \\"d\\" : d
            });

            console.log(css);

        }
    };
});
",
}
`;

exports[`rollup-rewriter should support loader being a function ("amd") 1`] = `
Object {
  "a": "
define(['require'], function (require) { 'use strict';
import chunkCountIs8 from \\"./css.js\\";

    const a = \\"mc_a\\";
    var css = {
        \\"a\\" : a
    };

    function a$1() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return a$1;

});
",
  "b": "
define(['require'], function (require) { 'use strict';
import chunkCountIs8 from \\"./css.js\\";

    const b = \\"mc_b\\";
    var css = {
        \\"b\\" : b
    };

    function b$1() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/d.css\\"),
    new Promise(function (resolve, reject) { require(['./d'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return b$1;

});
",
  "c": "
define(['exports'], function (exports) { 'use strict';

    const c = \\"mc_c\\";
    var css = {
        \\"c\\" : c
    };

    console.log(css);

    exports.default = css;

});
",
  "d": "
define(['exports'], function (exports) { 'use strict';

    const d = \\"mc_d\\";
    var css = {
        \\"d\\" : d
    };

    console.log(css);

    exports.default = css;

});
",
}
`;

exports[`rollup-rewriter should support loader being a function ("es") 1`] = `
Object {
  "a": "
import chunkCountIs8 from \\"./css.js\\";
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "b": "
import chunkCountIs8 from \\"./css.js\\";
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

function b$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b$1;
",
  "c": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
  "d": "
const d = \\"mc_d\\";
var css = {
    \\"d\\" : d
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should support loader being a function ("esm") 1`] = `
Object {
  "a": "
import chunkCountIs8 from \\"./css.js\\";
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "b": "
import chunkCountIs8 from \\"./css.js\\";
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

function b$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b$1;
",
  "c": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
  "d": "
const d = \\"mc_d\\";
var css = {
    \\"d\\" : d
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should support loader being a function ("system") 1`] = `
Object {
  "a": "
System.register([], function (exports, module) {
    'use strict';
import chunkCountIs8 from \\"./css.js\\";
    return {
        execute: function () {

            exports('default', a$1);

            const a = \\"mc_a\\";
            var css = {
                \\"a\\" : a
            };

            function a$1() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "b": "
System.register([], function (exports, module) {
    'use strict';
import chunkCountIs8 from \\"./css.js\\";
    return {
        execute: function () {

            exports('default', b$1);

            const b = \\"mc_b\\";
            var css = {
                \\"b\\" : b
            };

            function b$1() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/d.css\\"),
    module.import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "c": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const c = \\"mc_c\\";
            var css = exports('default', {
                \\"c\\" : c
            });

            console.log(css);

        }
    };
});
",
  "d": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const d = \\"mc_d\\";
            var css = exports('default', {
                \\"d\\" : d
            });

            console.log(css);

        }
    };
});
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("amd") 1`] = `
Object {
  "a.js": "
define(['require'], function (require) { 'use strict';

    const a = \\"mc_a\\";
    var css = {
        \\"a\\" : a
    };

    function a$1() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return a$1;

});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
define(['require'], function (require) { 'use strict';

    const b = \\"mc_b\\";
    var css = {
        \\"b\\" : b
    };

    function b$1() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/d.css\\"),
    new Promise(function (resolve, reject) { require(['./d'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return b$1;

});
",
  "c.js": "
define(['exports'], function (exports) { 'use strict';

    const c = \\"mc_c\\";
    var css = {
        \\"c\\" : c
    };

    console.log(css);

    exports.default = css;

});
",
  "d.js": "
define(['exports'], function (exports) { 'use strict';

    const d = \\"mc_d\\";
    var css = {
        \\"d\\" : d
    };

    console.log(css);

    exports.default = css;

});
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("es") 1`] = `
Object {
  "a.js": "
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

function b$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b$1;
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
  "d.js": "
const d = \\"mc_d\\";
var css = {
    \\"d\\" : d
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("esm") 1`] = `
Object {
  "a.js": "
const a = \\"mc_a\\";
var css = {
    \\"a\\" : a
};

function a$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a$1;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

function b$1() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b$1;
",
  "c.js": "
const c = \\"mc_c\\";
var css = {
    \\"c\\" : c
};

console.log(css);

export default css;
",
  "d.js": "
const d = \\"mc_d\\";
var css = {
    \\"d\\" : d
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("system") 1`] = `
Object {
  "a.js": "
System.register([], function (exports, module) {
    'use strict';
    return {
        execute: function () {

            exports('default', a$1);

            const a = \\"mc_a\\";
            var css = {
                \\"a\\" : a
            };

            function a$1() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
  "b.js": "
System.register([], function (exports, module) {
    'use strict';
    return {
        execute: function () {

            exports('default', b$1);

            const b = \\"mc_b\\";
            var css = {
                \\"b\\" : b
            };

            function b$1() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/d.css\\"),
    module.import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "c.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const c = \\"mc_c\\";
            var css = exports('default', {
                \\"c\\" : c
            });

            console.log(css);

        }
    };
});
",
  "d.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            const d = \\"mc_d\\";
            var css = exports('default', {
                \\"d\\" : d
            });

            console.log(css);

        }
    };
});
",
}
`;
